--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
           dotnet-version: 6.0.100
         # publishes Blazor project to the release-folder
       - name: Publish .NET Core Project
-        run: dotnet publish Showcase.csproj -c Release -o release --nologo
+        run: dotnet publish Showcase.Web.csproj -c Release -o release --nologo
       - name: Commit wwwroot to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
