--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,15 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 6.0.100
-        # publishes Blazor project to the release-folder
+      # publishes Blazor project to the release-folder
       - name: Publish .NET Core Project
         run: dotnet publish Showcase.Web/Showcase.Web.csproj -c Release -o release --nologo
+      # changes the base-tag in index.html from '/' to 'Showcase' to match GitHub Pages repository subdirectory
+      - name: Change base-tag in index.html from / to BlazorGitHubPagesDemo
+        run: sed -i 's/<base href="\/" \/>/<base href="\/Showcase\/" \/>/g' release/wwwroot/index.html
+      # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
+      - name: Add .nojekyll file
+        run: touch release/wwwroot/.nojekyll
       - name: Commit wwwroot to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
