--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,8 @@ jobs:
       - name: Publish .NET Core Project
         run: dotnet publish Showcase.Web/Showcase.Web.csproj -c Release -o release --nologo
       # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
+      - name: Change base-tag in index.html from / to Showcase
+        run: sed -i 's/<base href="\/" \/>/<base href="\/Showcase\/" \/>/g' release/wwwroot/index.html
       - name: Add .nojekyll file
         run: touch release/wwwroot/.nojekyll
       - name: Commit wwwroot to GitHub Pages
