--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
   # This workflow contains a single job called "build"
   deploy-to-github-pages:
     runs-on: ubuntu-latest
+    env:
+      PUBLISH_DIR: release/wwwroot
     steps:
       # uses GitHub's checkout action to checkout code form the master branch
       - uses: actions/checkout@v3
